--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@
 
 a {
     color: var(--branco);
+    transition: background-color 0.3s ease, color 0.3s ease;
 }
 
 :root {
@@ -35,4 +36,30 @@ body {
     background-color: var(--azul-medio);
     min-height: 100dvh;
     
+}
+
+
+
+.scroll-to-top {
+    position: fixed;
+    bottom: 2rem;
+    right: 2rem;
+    background-color: var(--cinza-medio);
+    color: var(--branco);
+    border-radius: 50%;
+    width: 3rem;
+    height: 3rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+    z-index: 1000;
+    opacity: 0.8;
+    transition: opacity 0.3s ease, transform 0.3s ease;
+}
+
+.scroll-to-top:hover {
+    opacity: 1;
+    transform: scale(1.1);
 }
