--- a/src/pages/contact.css
+++ b/src/pages/contact.css
@@ -84,7 +84,13 @@ a:hover {
     margin: .5rem 0;
 }
 .contact button {
-    background-color: #008000;
+    background-color:  #006100;
     color: var(--branco);
     font-size: large;
+    transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.contact button:hover {
+    background-color:#008000;
+    cursor: pointer;
 }
