--- a/src/components/Project.css
+++ b/src/components/Project.css
@@ -5,7 +5,7 @@
 
 }
 .container-project {
-    border: 1px solid var(--cinza-medio);
+    /* border: 1px solid var(--cinza-medio); */
     margin: 1rem;
     padding: 1rem;
     max-width: 30rem;
