Refactor: Remove MatrixEffect component; update Project component to accept limit prop and adjust rendering; enhance contact page styles and links; modify home page for smoother navigation and project display

--- a/src/pages/contact.css
+++ b/src/pages/contact.css
@@ -94,3 +94,11 @@ a:hover {
     background-color:#008000;
     cursor: pointer;
 }
+
+.contact a svg {
+    width: 1.2rem;
+}
+.contact a {
+    border-bottom: 1px solid var(--ciano);
+    color: var(--ciano);
+}
