--- a/src/pages/projects.css
+++ b/src/pages/projects.css
@@ -2,4 +2,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: var(--azul-escuro);
+}
+
+.projects-container >h2:first-child {
+    margin-top: 1.5rem;
+    text-transform: uppercase;
+    font-weight: 100;
+    font-size: 2rem;
 }
