--- a/src/components/Project.css
+++ b/src/components/Project.css
@@ -4,6 +4,7 @@
     justify-content: space-evenly;
 
 }
+
 .container-project {
     /* border: 1px solid var(--cinza-medio); */
     margin: 1rem;
@@ -23,6 +24,7 @@
     width: 100%;
     border-radius: 8px;
 }
+
 .banner-project img {
     width: 100%;
     height: 200px;
@@ -33,6 +35,7 @@
     transition: background-color 0.3s ease, color 0.3s ease, opacity 0.3s;
     margin-bottom: 1rem;
 }
+
 .banner-project img:hover {
     opacity: 1;
     transition: 3;
@@ -84,10 +87,19 @@
     text-align: center;
 }
 
+.container-project a.link-offline {
+    color: var(--laranja);
+}
+
+
 .container-project a:hover {
     background-color: var(--cinza-medio);
     transition: background-color 0.3s ease, color 0.3s ease;
     cursor: pointer;
+}
+
+.container-project a.link-offline:hover {
+    cursor: not-allowed;
 }
 
 .btn-links {
@@ -97,12 +109,23 @@
     gap: 1rem;
 }
 
+.tooltip {
+    background-color: var(--azul-medio);
+    color: var(--branco);
+    border-radius: 1.5rem;
+    max-width: 250px;
+    text-align: center;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+}
+
+
 @media screen and (max-width: 1023px) {
     .banner-project img {
         opacity: 1;
     }
+
     .banner-project h2 {
         background-color: var(--azul-medio);
     }
-    
+
 }
